# Backend/internal/users/router.go
@@ -3,17 +3,20 @@ package users
 import (
 	"database/sql"
 
+	accesskeys "github.com/crcaniullan-commits/Tally/internal/accessKeys"
+	"github.com/crcaniullan-commits/Tally/internal/dbtx"
 	errorhandler "github.com/crcaniullan-commits/Tally/internal/error"
 	"github.com/crcaniullan-commits/Tally/internal/util"
 	"github.com/go-chi/chi/v5"
 	"go.uber.org/zap"
 )
 
-func InitModule(r chi.Router, db *sql.DB, logger *zap.SugaredLogger, middl util.MiddlewareAuth) {
+func InitModule(r chi.Router, db *sql.DB, logger *zap.SugaredLogger, tran *dbtx.Transactor, middl util.MiddlewareAuth) {
 	err := errorhandler.NewErrorResponse(logger)
+	redm := accesskeys.NewStorage(db)
 
 	repo := NewStorage(db)
-	svc := NewUserService(repo)
+	svc := NewUserService(repo, redm, tran)
 	hdl := NewUserHandler(svc, err)
 
 	r.Route("/users", func(r chi.Router) {
